--- a/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
+++ b/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.cardapio.CardapioController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.CardapioController">
    <children>
       <Text fill="#285eed" fontSmoothingType="LCD" layoutX="182.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clinica Bem-Estar" textAlignment="CENTER" wrappingWidth="251.1295166015625">
          <font>
