--- a/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
+++ b/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
@@ -8,29 +8,31 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.CardapioController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.AcademiaController">
    <children>
-      <Text fill="#285eed" fontSmoothingType="LCD" layoutX="182.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clinica Bem-Estar" textAlignment="CENTER" wrappingWidth="251.1295166015625">
+      <Text fill="#285eed" fontSmoothingType="LCD" layoutX="182.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inclusao de exercicios" textAlignment="CENTER" wrappingWidth="251.1295166015625">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
       <Text layoutX="85.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dia da Semana:" wrappingWidth="110.35675048828125" />
-      <RadioButton fx:id="cafeManha" layoutX="173.0" layoutY="167.0" mnemonicParsing="false" text="Café da Manhã" />
-      <RadioButton fx:id="lancheManha" layoutX="173.0" layoutY="192.0" mnemonicParsing="false" text="Lanche Manhã" />
-      <RadioButton fx:id="almoco" layoutX="173.0" layoutY="216.0" mnemonicParsing="false" text="Almoço" />
-      <RadioButton fx:id="lancheTarde" layoutX="322.0" layoutY="167.0" mnemonicParsing="false" text="Lanche Tarde" />
-      <RadioButton fx:id="jantar" layoutX="322.0" layoutY="192.0" mnemonicParsing="false" text="Jantar" />
-      <RadioButton fx:id="ceia" layoutX="322.0" layoutY="216.0" mnemonicParsing="false" text="Ceia" />
+      <RadioButton fx:id="peito" layoutX="173.0" layoutY="167.0" mnemonicParsing="false" text="Peito" />
+      <RadioButton fx:id="biceps" layoutX="173.0" layoutY="192.0" mnemonicParsing="false" text="Bíceps" />
+      <RadioButton fx:id="triceps" layoutX="173.0" layoutY="216.0" mnemonicParsing="false" text="Tríceps" />
+      <RadioButton fx:id="costas" layoutX="322.0" layoutY="167.0" mnemonicParsing="false" text="Costas" />
+      <RadioButton fx:id="perna" layoutX="322.0" layoutY="192.0" mnemonicParsing="false" text="Perna" />
+      <RadioButton fx:id="ombro" layoutX="322.0" layoutY="216.0" mnemonicParsing="false" text="Ombro" />
       <Text layoutX="141.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrição:" />
       <TextArea fx:id="descricaoField" layoutX="234.0" layoutY="262.0" prefHeight="24.0" prefWidth="207.0" />
-      <Text layoutX="114.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valor Calorico:" />
-      <TextArea fx:id="valueDescription" layoutX="234.0" layoutY="314.0" prefHeight="15.0" prefWidth="207.0" />
-      <Button fx:id="incluir" layoutX="85.0" layoutY="380.0" mnemonicParsing="false" onAction="#Incluir" text="Incluir" />
-      <Button fx:id="consultar" layoutX="254.0" layoutY="380.0" mnemonicParsing="false" onAction="#Consultar" text="Consultar" />
-      <Button fx:id="remover" layoutX="165.0" layoutY="380.0" mnemonicParsing="false" onAction="#Remover" text="Remover" />
-      <Button fx:id="alterar" layoutX="355.0" layoutY="380.0" mnemonicParsing="false" onAction="#Alterar" text="Alterar" />
-      <Button fx:id="limpar" layoutX="441.0" layoutY="380.0" mnemonicParsing="false" onAction="#Limpar" text="Limpar" />
+      <Text layoutX="161.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:" />
+      <TextArea fx:id="nomeField" layoutX="234.0" layoutY="314.0" prefHeight="15.0" prefWidth="207.0" />
+      <Text layoutX="157.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carga:" />
+      <TextArea fx:id="cargaValue" layoutX="233.0" layoutY="368.0" prefHeight="15.0" prefWidth="207.0" />
+      <Text layoutX="146.0" layoutY="446.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repetiçoes" />
+      <TextArea fx:id="repeticoesValue" layoutX="234.0" layoutY="422.0" prefHeight="15.0" prefWidth="207.0" />
+      <Button fx:id="incluir" layoutX="218.0" layoutY="532.0" mnemonicParsing="false" onAction="#Incluir" text="Incluir" />
+      <Button fx:id="limpar" layoutX="306.0" layoutY="532.0" mnemonicParsing="false" onAction="#Limpar" text="Limpar" />
       <ComboBox fx:id="diaDaSemana" layoutX="209.0" layoutY="105.0" prefHeight="24.0" prefWidth="251.0" promptText="--selecione o dia--" />
+      <Button fx:id="voltar" layoutX="377.0" layoutY="532.0" mnemonicParsing="false" onAction="#Voltar" text="Voltar" />
    </children>
 </Pane>
