--- a/academia/src/main/resources/com/nico/cefet/academia/registerDocument.fxml
+++ b/academia/src/main/resources/com/nico/cefet/academia/registerDocument.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.nico.cefet.academia.RegisterDocument"
+            fx:controller="com.nico.cefet.academia.controller.RegisterDocument"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
