--- a/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
+++ b/academia/src/main/resources/com/nico/cefet/academia/hello-view.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.controller.AcademiaController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.controller.AcademiaController">
    <children>
-      <Text fill="#285eed" fontSmoothingType="LCD" layoutX="182.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inclusao de exercicios" textAlignment="CENTER" wrappingWidth="251.1295166015625">
+      <Text fill="#285eed" fontSmoothingType="LCD" layoutX="139.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inclusao de exercicios" textAlignment="CENTER" wrappingWidth="322.32952880859375">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
@@ -22,17 +22,17 @@
       <RadioButton fx:id="costas" layoutX="322.0" layoutY="167.0" mnemonicParsing="false" text="Costas" />
       <RadioButton fx:id="perna" layoutX="322.0" layoutY="192.0" mnemonicParsing="false" text="Perna" />
       <RadioButton fx:id="ombro" layoutX="322.0" layoutY="216.0" mnemonicParsing="false" text="Ombro" />
-      <Text layoutX="141.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrição:" />
-      <TextArea fx:id="descricaoField" layoutX="234.0" layoutY="262.0" prefHeight="24.0" prefWidth="207.0" />
-      <Text layoutX="161.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:" />
-      <TextArea fx:id="nomeField" layoutX="234.0" layoutY="314.0" prefHeight="15.0" prefWidth="207.0" />
-      <Text layoutX="157.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carga:" />
-      <TextArea fx:id="cargaValue" layoutX="233.0" layoutY="368.0" prefHeight="15.0" prefWidth="207.0" />
-      <Text layoutX="146.0" layoutY="446.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repetiçoes" />
-      <TextArea fx:id="repeticoesValue" layoutX="234.0" layoutY="422.0" prefHeight="15.0" prefWidth="207.0" />
-      <Button fx:id="incluir" layoutX="218.0" layoutY="532.0" mnemonicParsing="false" onAction="#Incluir" text="Incluir" />
-      <Button fx:id="limpar" layoutX="306.0" layoutY="532.0" mnemonicParsing="false" onAction="#Limpar" text="Limpar" />
+      <Text layoutX="155.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:" />
+      <TextArea fx:id="nomeField" layoutX="228.0" layoutY="271.0" prefHeight="15.0" prefWidth="207.0" />
+      <Text layoutX="151.0" layoutY="349.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carga:" />
+      <TextArea fx:id="cargaValue" layoutX="227.0" layoutY="325.0" prefHeight="15.0" prefWidth="207.0" />
+      <Text layoutX="140.0" layoutY="403.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Repetiçoes" />
+      <TextArea fx:id="repeticoesValue" layoutX="228.0" layoutY="379.0" prefHeight="15.0" prefWidth="207.0" />
+      <Button fx:id="incluir" layoutX="85.0" layoutY="461.0" mnemonicParsing="false" onAction="#Incluir" text="Incluir" />
+      <Button fx:id="limpar" layoutX="188.0" layoutY="461.0" mnemonicParsing="false" onAction="#Limpar" text="Limpar" />
       <ComboBox fx:id="diaDaSemana" layoutX="209.0" layoutY="105.0" prefHeight="24.0" prefWidth="251.0" promptText="--selecione o dia--" />
-      <Button fx:id="voltar" layoutX="377.0" layoutY="532.0" mnemonicParsing="false" onAction="#Voltar" text="Voltar" />
+      <Button fx:id="voltar" layoutX="490.0" layoutY="461.0" mnemonicParsing="false" onAction="#Voltar" text="Voltar" />
+      <Button fx:id="remover" layoutX="292.0" layoutY="461.0" mnemonicParsing="false" onAction="#Remover" text="Remover" />
+      <Button fx:id="salvar" layoutX="406.0" layoutY="461.0" mnemonicParsing="false" onAction="#Salvar" text="Salvar" />
    </children>
 </Pane>
