--- a/academia/src/main/resources/com/nico/cefet/academia/homeDocument.fxml
+++ b/academia/src/main/resources/com/nico/cefet/academia/homeDocument.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,20 +9,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="497.0" prefWidth="735.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.controller.HomeDocumentController">
+<AnchorPane prefHeight="646.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nico.cefet.academia.controller.HomeDocumentController">
    <children>
-      <Text layoutX="38.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem-Vindo">
+      <Text layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem-Vindo">
          <font>
-            <Font size="16.0" />
+            <Font size="24.0" />
          </font>
       </Text>
-      <TextArea layoutX="141.0" layoutY="11.0" prefHeight="36.0" prefWidth="158.0" />
-      <GridPane layoutX="18.0" layoutY="123.0" prefHeight="359.0" prefWidth="700.0">
+      <TextArea fx:id="userName" editable="false" layoutX="182.0" layoutY="9.0" prefHeight="36.0" prefWidth="158.0">
+         <font>
+            <Font size="24.0" />
+         </font></TextArea>
+      <GridPane fx:id="treinoGridPane" layoutX="14.0" layoutY="124.0" prefHeight="498.0" prefWidth="870.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,71 +40,99 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <RadioButton mnemonicParsing="false" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="2" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="4" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="5" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="6" />
-            <RadioButton mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <TextArea prefHeight="200.0" prefWidth="200.0" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" />
+            <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="6" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <Text layoutX="68.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="162.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="241.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="345.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="442.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="540.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
-      <Text layoutX="638.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda" />
+      <Text layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Domingo">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="148.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Segunda">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="289.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Terça">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="411.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quarta">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="534.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quinta">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="659.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexta">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="784.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sabado">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Button fx:id="alterarFicha" layoutX="659.0" layoutY="16.0" mnemonicParsing="false" onAction="#GoToAcademia" text="Alterar Ficha">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Button fx:id="atualiza" layoutX="494.0" layoutY="16.0" mnemonicParsing="false" onAction="#UpdateGridPane" prefHeight="46.0" prefWidth="140.0" text="Atualizar">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
